# dynamic_harness

./: .env.example  .gitignore  AGENTS.md  README.md  directory_report.md  harness.json.example  opencode.json  optimize.prompt  pyproject.toml  review_and_improvements.md  setup_review.md  starting_point.md  undeveloped_sugestions.md
docs/: CRITICAL_REVIEW_TODO.md  VISION.md  __undeveloped_sugestions__.md  agent_methodology_guidelines.md
docs/api/: agent.md  artifacts.md  llm.md  repository.md  runtime.md  task.md  tools.md
docs/concepts/: agent-lifecycle.md  artifact-system.md  delegation-model.md
docs/guides/: custom-agents.md  extending-tools.md  getting-started.md  programmatic-usage.md
examples/: hierarchy_demo.py  meta_agent_demo.py  openrouter_demo.py  research_agent.py
prompts/: code_review.txt  file_inventory.txt  optimize.prompt  security_audit.txt  test_optimize.prompt
src/dynamic_harness/: __init__.py  __main__.py  config.py
src/dynamic_harness/artifact/: __init__.py  store.py  summary.py
src/dynamic_harness/cli/: agent_loop.py  common.py  repl.py  tui.py
src/dynamic_harness/core/: __init__.py  agent.py  agent_examples.py  agent_system_prompt.txt  capabilities.py  events.py  meta_agent.py  protocols.py  runner.py  runtime.py  task.py  trace.py  usage.py
src/dynamic_harness/llm/: __init__.py  (+2 more)
tests/: conftest.py  test_agent.py  test_agent_loop.py  test_agent_loop_detection.py  test_artifact.py  test_capabilities.py  test_e2e.py  test_meta_agent.py  test_repository.py  test_runtime.py
tests/backend/: test_agent.py  test_agent_loop.py  test_agent_loop_detection.py  test_artifact.py  test_capabilities.py  test_config.py  test_e2e.py  test_provider.py  test_repository.py  test_runtime.py  test_summary.py  test_trace.py
tests/cli/: test_tui_args.py
(+2 files in other folders)
